test/corpus/comment.txt
========================================
Comment - single line comment
========================================

# This is a comment

---

(program (comment))

========================================
Comment - multi line comment
========================================

# This is a comment
# That spans multiple lines

---

(program (comment) (comment))

========================================
Comment - multi line with escape sequence
========================================

# This is a comment
# With multiple\ lines and \xFFescape sequence

---

(program (comment) (comment))


========================================
Comment - ending command
========================================

true # a comment
# in between
;; true # a comment

---

(program
    (command name: (word))
    (comment)
    (comment)
    (command name: (word))
    (comment))
