test/corpus/falsely_correct_cases.txt
================================================================================
Invalid begin statement content
================================================================================

begin & end
begin && end
begin | end
begin > end
begin < end

--------------------------------------------------------------------------------

(program
  (begin_statement)
  (begin_statement)
  (begin_statement
    (ERROR))
  (begin_statement
    (ERROR
      (direction)))
  (begin_statement
    (ERROR
      (direction))))

================================================================================
Background commands cannot be used as conditionals
================================================================================

while echo &
end

--------------------------------------------------------------------------------

(program
  (while_statement
    (command
      (builtin))))
