test/corpus/for_statement.txt
========================================
For Statement - simple
========================================

for x in $LIST; end;

for x in $LIST;
end;

---

(program
    (for_statement
        variable: (variable_name)
        value: (variable_expansion (variable_name)))
    (for_statement
        variable: (variable_name)
        value: (variable_expansion (variable_name))))

========================================
For Statement - new line should end value list
========================================

for x in 1 2
3
4
5;
    echo $x;
end;

---

(program
    (for_statement
        variable: (variable_name)
        value: (integer)
        value: (integer)
        (command
            name: (integer))
        (command
            name: (integer))
        (command
            name: (integer))
        (command
            name: (word)
            argument: (variable_expansion (variable_name)))))

========================================
For Statement - flow control
========================================

for x in $LIST; break; end;

for x in $LIST;
    continue;
end;

---

(program
    (for_statement
        variable: (variable_name)
        value: (variable_expansion (variable_name))
        (break))
    (for_statement
        variable: (variable_name)
        value: (variable_expansion (variable_name))
        (continue)))
