test/corpus/glob.txt
================================================================================
Glob
================================================================================

echo *
ls ./*
ls *.txt
set *.h
$cmd *.h
echo ./**/*.txt

--------------------------------------------------------------------------------

(program
  (command
    (builtin)
    (glob))
  (command
    (word)
    (concatenation
      (word)
      (glob)))
  (command
    (word)
    (concatenation
      (glob)
      (word)))
  (command
    (builtin)
    (concatenation
      (glob)
      (word)))
  (command
    (variable_expansion
      (variable_name))
    (concatenation
      (glob)
      (word)))
  (command
    (builtin)
    (concatenation
      (word)
      (glob)
      (word)
      (glob)
      (word))))
