test/corpus/home_dir_expansion.txt
================================================================================
Home Dir Expansion
================================================================================

echo ~
ls ~
$cmd ~/app

--------------------------------------------------------------------------------

(program
  (command
    (builtin)
    (home_dir_expansion))
  (command
    (word)
    (home_dir_expansion))
  (command
    (variable_expansion
      (variable_name))
    (concatenation
      (home_dir_expansion)
      (word))))
