test/corpus/single_quote_string.txt
================================================================================
Single quote string - single word
================================================================================

'value'
'#'

--------------------------------------------------------------------------------

(program
  (command
    name: (single_quote_string
      (string_content)))
  (command
    name: (single_quote_string
      (string_content))))

================================================================================
Single quote string - multi words
================================================================================

'value of the string is anything inbetween the quotes'

--------------------------------------------------------------------------------

(program
  (command
    name: (single_quote_string
      (string_content))))

================================================================================
Single quote string - escape sequences
================================================================================

'value of the string is anything between the quotes\
a string can span two lines'

--------------------------------------------------------------------------------

(program
  (command
    name: (single_quote_string
      (string_content)
      (escape_sequence)
      (string_content))))

================================================================================
Single quote string - escaped quotes
================================================================================

'string can have escaped single quotes in it: \''

--------------------------------------------------------------------------------

(program
  (command
    name: (single_quote_string
      (string_content)
      (escape_sequence))))

================================================================================
Single quote string - double quotes with no meaning
================================================================================

'value "$PATH" is literal'

--------------------------------------------------------------------------------

(program
  (ERROR
    (single_quote_string
      (string_content)
      (MISSING "'"))
    (variable_expansion
      (variable_name))
    (string_content)))

================================================================================
Single quote string - no variable expansion
================================================================================

'$PATH'

--------------------------------------------------------------------------------

(program
  (ERROR
    (variable_expansion
      (variable_name))
    (string_content)))
