test/corpus/special_character.txt
================================================================================
Special Character - bracket
================================================================================

echo [
echo ]
echo test]
echo [test]
echo test[]

--------------------------------------------------------------------------------

(program
  (command
    name: (builtin)
    argument: (word))
  (command
    name: (builtin)
    argument: (word))
  (command
    name: (builtin)
    argument: (concatenation
      (builtin)))
  (command
    name: (builtin)
    argument: (concatenation
      (builtin)))
  (command
    name: (builtin)
    argument: (concatenation
      (builtin))))
